# scikit-stats

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: api.rst  conf.py  getting-started.rst  index.rst  tutorials.rst
docs/_static/: version_switcher.json
docs/notebooks/: basics.ipynb
src/skstats/: __init__.py  log_uniform.py  normal.py  uniform.py
tests/: reference_distributions.py  test_reference_distribution_infrastructure.py
